--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
 
-
 <div id="vanta-bg"></div>
 <div class="page">
   <div class="card" [class.show]="show">
@@ -7,53 +6,58 @@
     
 
     <!-- 一般情況：有 key 的欄位 (name, age) -->
-    <ng-container *ngIf="step.key as key">
+    @if (step.key; as key) {
       <input #autoFocusInput
-              class="field"
+             class="field"
              [type]="step.type || 'text'"
              [placeholder]="step.placeholder || ''"
              [(ngModel)]="form[key]"
              (keyup.enter)="onEnter()"
-             [attr.inputmode]="step.type === 'number' ? 'numeric' : null" />
-    </ng-container>
+         />
+    }
 
     <!-- 特殊情況：passwordSuccess 顯示等待動畫 -->
-    <ng-container *ngIf="step.id === 'passwordSuccess'">
- 
+    @if (step.id === 'passwordSuccess') {
       <mat-progress-bar class="progress-bar" mode="indeterminate" color="accent"></mat-progress-bar>
-      <p style="margin-top:10px; font-weight: bold; color: white;"class="progress-text">
+      <p style="margin-top:10px; font-weight: bold; color: white;" class="progress-text">
         {{ statusMsg }}
       </p>
- 
-    </ng-container>
+    }
 
     <!-- 特殊情況：credentials 同一頁兩個欄位 -->
-    <ng-container *ngIf="step.id === 'credentials'">
-             <input
-             #autoFocusInput 
-             class="field"
-             type="text"
-             placeholder="員工編號"
-             [(ngModel)]="form.employeeId"
-             (keyup.enter)="next()"  
-             autocomplete="off" />
+    <!-- 當 idLocked = true 時，輸入框就變成唯讀（不能再修改）。 -->
+    <!-- autocomplete 防止瀏覽器自動帶入舊輸入值 -->
+    @if (step.id === 'credentials') {
+      <input
+        #autoFocusInput 
+        class="field"
+        type="text"
+        [(ngModel)]="form.employeeId"
+        [readonly]="idLocked"  />
+    
+      <input 
 
-             <input 
-             #autoFocusInput
-             #passwordInput
-             class="field"
-             type="password"
-             placeholder="密碼"
-             [(ngModel)]="form.loginPassword" 
-             (keyup.enter)="onEnter()" />
-    </ng-container>
+        #passwordInput
+        class="field"
+        type="password"
+        placeholder="密碼"
+        [(ngModel)]="form.loginPassword" 
+        (keyup.enter)="onEnter()" />
+    }
+    
 
 
     <!-- 進度點點 -->
-    <div class="dots" *ngIf="step.id !== 'done'">
-      <span *ngFor="let s of steps; let i = index" [class.active]="i === index"></span>
-    </div>
+    <!-- track i 這個元素的唯一身份就用索引值 i -->
+    <!-- active 這個 class 會不會加上去，由 條件判斷 (i === index) 決定 -->
+    @if (step.id !== 'done') {
+      <div class="dots">
+        @for (s of steps; track i; let i = $index) {
+          <span [class.active]="i === index"></span>
+        }
+      </div>
+    }
   </div>
 </div>
 
-<!-- <router-outlet></router-outlet> -->
+
