--- a/src/src/app/clock/clock.component.scss
+++ b/src/src/app/clock/clock.component.scss
@@ -1,206 +1,157 @@
 .clock-dial {
-    --clock-size: 500px;   /* 想要多大改這裡 */
-    width: var(--clock-size);
-    height: var(--clock-size);
-    border: calc(var(--clock-size) * 0.04) solid #563727; /* 邊框比例 */
-    background-color: rgba(222, 158, 72, 0.4);
-    border-radius: 50%;
-    margin: 50px auto;
-    position: relative;
-    box-shadow: 5px 5px 10px grey;
-  }
-  
-  .point {
-    width: 20px;
-    height: 20px;
-    background-color: #563727;
-    // background-color: transparent;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .brand {
-    font-size: 35px;
-    font-weight: bold;
-    color: #563727;
-    position: absolute;
-    top: 140px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  /* 數字 */
-  .numbers {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  
-  .numbers span {
-    position: absolute;
-    transform: rotate(calc(#{'30deg * var(--i) - 90deg'}))
-               translate(190px)
-               rotate(calc(#{'-30deg * var(--i) + 90deg'}));
-    font-size: 50px;
-    font-weight: bold;
-    color: #372c2e;
-  }
-  
-  /* Minute hand */
-//   .minute-hand-wrapper {
-//     width: 150px;
-//     height: 150px;
-//     position: absolute;
-//     top: 310px;
-//     left: 130px;
-//     border-radius: 50%;
-//   }
-//   .minute-hand .hand {
-//     width: 4px;
-//     height: 150px;
-//     background-color: #563727;
-//     position: absolute;
-//     left: 198px;
-//   }
-/* 分針 wrapper 填滿整個鐘 */
+  --clock-size: 130px;   /* 想要多大改這裡 */
+  width: var(--clock-size);
+  height: var(--clock-size);
+  border: calc(var(--clock-size) * 0.04) solid #563727;
+  background-color: rgba(222, 158, 72, 0.4);
+  border-radius: 50%;
+  margin: 50px auto;
+  position: relative;
+  box-shadow: 5px 5px 10px grey;
+}
 
-//   .minute-hand .arrow {
-//     font-size: 30px;
-//     font-weight: bold;
-//     color: #563727;
-//     transform: rotate(180deg);
-//     position: absolute;
-//     left: 190px;
-//     top: -7px;
-//   }
+.point {
+  width: calc(var(--clock-size) * 0.04);
+  height: calc(var(--clock-size) * 0.04);
+  background-color: #563727;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
+.brand {
+  font-size: calc(var(--clock-size) * 0.07);
+  font-weight: bold;
+  color: #563727;
+  position: absolute;
+  top: calc(var(--clock-size) * 0.28);
+  left: 50%;
+  transform: translateX(-50%);
+}
 
+/* 數字 */
+.numbers {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.numbers span {
+  position: absolute;
+  transform: rotate(calc(30deg * var(--i) - 90deg))
+             translate(calc(var(--clock-size) * 0.38))
+             rotate(calc(-30deg * var(--i) + 90deg));
+  font-size: calc(var(--clock-size) * 0.1);
+  font-weight: bold;
+  color: #372c2e;
+}
+
+/* 分針 */
 .minute-hand-wrapper {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    /* 不要再用 flex 居中，會害旋轉基準跑掉 */
-  }
-  
-  .minute-hand {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .minute-hand .hand {
-    width: 4px;
-    height: 200px;              /* 分針長度 */
-    background-color: #563727;
-    position: absolute;
-    top: 50%;                   /* 針的底部放在中心 */
-    left: 50%;
-    transform: translate(-50%, -100%); 
-    transform-origin: bottom center;  /* 以底部為旋轉中心 */
-  }
-  
-  .minute-hand .arrow {
-    font-size: 24px;
-    font-weight: bold;
-    color: #563727;
-    position: absolute;
-    top: calc(50% - 200px);   /* 箭頭在分針頂端 */
-    left: 50%;
-    transform: translateX(-50%) rotate(180deg);
-  }
-  /* Hour hand */
-//   .hour-hand-wrapper {
-//     width: 150px;
-//     height: 150px;
-//     position: absolute;
-//     top: 93px;
-//     left: 201px;
-//     border-radius: 50%;
-//   }
-//   .hour-hand .hand {
-//     width: 4px;
-//     height: 125px;
-//     background-color: #563727;
-//     position: absolute;
-//     left: 148px;
-//   }
-//   .hour-hand .arrow {
-//     font-size: 30px;
-//     font-weight: bold;
-//     color: #563727;
-//     transform: rotate(180deg);
-//     position: absolute;
-//     left: 140px;
-//     top: -7px;
-//   }
-.hour-hand-wrapper {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  
-  .hour-hand {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .hour-hand .hand {
-    width: 4px;
-    height: 120px;                /* 時針長度 */
-    background-color: #563727;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-    transform-origin: bottom center;  /* 旋轉基準在底部中心 */
-  }
-  
-  .hour-hand .arrow {
-    font-size: 24px;
-    font-weight: bold;
-    color: #563727;
-    position: absolute;
-    top: calc(50% - 120px);      /* 箭頭放在時針頂端 */
-    left: 50%;
-    transform: translateX(-50%) rotate(180deg);
-  }
-  
-  /* Second hand */
-  .second-hand-wrapper {
-    width: 350px;
-    height: 350px;
-    position: absolute;
-    top: 77px;
-    left: 77px;
-    border-radius: 50%;
-  }
-  .second-hand .hand {
-    width: 2px;
-    height: 175px;
-    background-color: #aa7228;
-    position: absolute;
-    left: 174px;
-  }
-  .clock-scale {
-    transform: scale(0.3); /* 0.6 = 縮小 60% */
-    transform-origin: center center; /* 以中心點縮放 */
-  }
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.minute-hand {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.minute-hand .hand {
+  width: calc(var(--clock-size) * 0.015);
+  height: calc(var(--clock-size) * 0.4);
+  background-color: #563727;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  transform-origin: bottom center;
+}
+.minute-hand .arrow {
+  font-size: calc(var(--clock-size) * 0.08);  /* 原本 24px 改比例 */
+  font-weight: bold;
+  color: #563727;
+  position: absolute;
+  font-size: calc(var(--clock-size) * 0.08);
+  font-weight: bold;
+  color: #563727;
+  position: absolute;
+  top:  calc(57% - var(--clock-size) * 0.4);
+  left: 50%;
+  transform: translate(-50%, -100%) rotate(180deg); 
+}
 
-  .side-clock {
-    position: fixed;
-    top: 120px;   /* 距離頁面頂部 */
-    right: 40px;  /* 貼近右邊空白處 */
-    z-index: 1000;
-  }
+
+/* 時針 */
+.hour-hand-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.hour-hand {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.hour-hand .hand {
+  width: calc(var(--clock-size) * 0.015);
+  height: calc(var(--clock-size) * 0.25);
+  background-color: #563727;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  transform-origin: bottom center;
+}
+.hour-hand .arrow {
+  font-size: calc(var(--clock-size) * 0.07);  /* 原本 24px 改比例 */
+  font-weight: bold;
+  color: #563727;
+  position: absolute;
+  font-size: calc(var(--clock-size) * 0.07);
+  font-weight: bold;
+  color: #563727;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -100%) rotate(180deg);
+}
+
+/* 秒針 */
+.second-hand-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.second-hand .hand {
+  width: calc(var(--clock-size) * 0.008);
+  height: calc(var(--clock-size) * 0.35);
+  background-color: #aa7228;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  transform-origin: bottom center;
+}
+
+.clock-scale {
+  transform-origin: center center;
+}
+
+.side-clock {
+  position: fixed;
+  top: 120px;
+  right: 40px;
+  z-index: 1000;
+}
