--- a/src/src/app/waterdrop/waterdrop.component.html
+++ b/src/src/app/waterdrop/waterdrop.component.html
@@ -1,7 +1,10 @@
 <div id="banner">
-    <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg"
-         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-         xml:space="preserve">
+  <svg version="1.1" id="logo"
+  xmlns="http://www.w3.org/2000/svg"
+  xmlns:xlink="http://www.w3.org/1999/xlink"
+  x="0px" y="0px"
+  viewBox="-65 -20  280 180"
+  xml:space="preserve">
       <defs>
         <clipPath id="drop">
           <!-- 只保留水滴外框 -->
