--- a/src/app/pre-schedule-dialog/pre-schedule-dialog.component.html
+++ b/src/app/pre-schedule-dialog/pre-schedule-dialog.component.html
@@ -5,9 +5,7 @@
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
-
   <h1 class="main-title">預排班系統</h1>
-
   <div class="container">
     <div class="calendar-wrapper">
       <div class="shell">
@@ -16,10 +14,8 @@
           <button mat-icon-button class="only-nav only-nav-left" (click)="prevMonth()" aria-label="上一月">
             <mat-icon>chevron_left</mat-icon>
           </button>
-
           <div class="day">{{ currentMonth }}</div>
           <div class="month">{{ monthName }}</div>
-
           <!-- 右箭頭（下一月） -->
           <button mat-icon-button class="only-nav only-nav-right" (click)="nextMonth()" aria-label="下一月">
             <mat-icon>chevron_right</mat-icon>
@@ -33,38 +29,39 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let week of getWeeks()">
-              <td *ngFor="let cell of week">
-                <ng-container *ngIf="cell; else blankCell">
-                  <div
-                    [class.clickable-date]="!cell.disabled"
-                    [class.disabled-date]="cell.disabled"
-                    [class.selected-date]="!cell.disabled && isDateSelected(cell.key)"
-                    (click)="onCellClick(cell)"
-                  >
-                    {{ cell.key.split('-')[2] }}
-                  </div>
-                </ng-container>
-                <ng-template #blankCell>
-                  <div class="empty-date"></div>
-                </ng-template>
-              </td>
-            </tr>
-          </tbody>
+            @for (week of getWeeks(); track $index) {
+              <tr>
+                @for (cell of week; track $index) {
+                  <td>
+                    @if (cell) {
+                      <div
+                        [class.clickable-date]="cell.disabled === false"
+                        [class.disabled-date]="cell.disabled"
+                        [class.selected-date]="cell.disabled === false && selectedDates.has(cell.key)"
+                        (click)="onCellClick(cell)"
+                      >
+                        {{ cell.key.split('-')[2] }}
+                      </div>
+                    } @else {
+                      <div class="empty-date"></div>
+                    }
+                  </td>
+                }
+              </tr>
+            }
+          </tbody>   
         </table>
 
         <div class="ring-left"></div>
         <div class="ring-right"></div>
       </div>
     </div>
-
     <div class="selected-dates-panel">
-      <h2 class="panel-title">已選擇的休假日期</h2>
+      <h2 class="panel-title">已選擇的日期</h2>
       <div class="selected-count">已選擇 {{ selectedDates.size }} 天</div>
-
       @if (selectedDates.size === 0) {
         <div class="no-selection">
-          尚未選擇任何排班日期<br /><br />
+          尚未選擇任何排班日期<br/><br/>
           請點選左側日曆的日期進行選擇
         </div>
       }
